# emo-core-v1

./: .gitignore  ARCHITECTURE.md  BRAND & TRADEMARKS.md  DESTINE_INTEGRATION.md  Dockerfile  LICENSE  LIVE_PIPELINES.md  README.md  WHITEPAPER_EMO_v1_Why_EMO_Must_Run_Continuously.md.docx  WHITEPAPER_EMO_v1_funders.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py
api/routers/: __init__.py  interfaces.py  metrics.py  uia.py
dashboard/: package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/components/: ScenarioTable.tsx  UIAGauge.tsx
data/: ecmwf_headline_scores.csv
deck/: EMO_v1_Founder_Pitch_Deck.md
docs/: TECH_CONTACT.md
emo/: __init__.py  config.py  data_sources.py  gwi.py  info_time.py  organismality.py  reciprocity.py  smf.py  synergy.py
emo/ew_hooks/: __init__.py  undrr_wmo.py
emo/ew_hooks/emo/ew_hooks/: undrr_wmo.py
emo/ingestion/: __init__.py  base.py  forecast_skill.py  gdelt.py  openalex.py  owid.py  pipelines.py  wikipedia.py
emo/services/: metrics.py
emo/twin_hooks/: __init__.py  climate_ensembles.py  destine.py
emo/twin_hooks/emo/twin_hooks/: climate_ensembles.py
emo/uia_engine/: __init__.py  aggregate.py  coherence_entropy_info.py  focusing.py  geometry.py  models.py  semantic_efficiency.py
grants/: GRANT_HorizonEurope_EMO_v1.md
notebooks/: emo_v10_demos.ipynb
orchestration/: airflow_dag_emo.py  prefect_flows.py
tests/: __init__.py  test_api_uia_and_meta.py  test_imports.py  test_metrics_service.py  test_organismality_basic.py  test_uia_engine_smoke.py
